// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Child handles empty titles appropriately 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        ref={[Function]}
      >
        -
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-1 childlist__pid css-11rz0ao-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;

exports[`Child renders a thumbnail 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        ref={[Function]}
      >
        ajax-loaded title
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      ObjectThumbnail: {"pid":"foo:123"}
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-1 childlist__pid css-11rz0ao-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;

exports[`Child renders child counts 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        ref={[Function]}
      >
        ajax-loaded title
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      ObjectChildCounts:{"pid":"foo:123"}
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-1 childlist__pid css-11rz0ao-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;

exports[`Child renders thumbnail and child counts 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        ref={[Function]}
      >
        ajax-loaded title
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
    >
      ObjectThumbnail: {"pid":"foo:123"}
      ObjectChildCounts:{"pid":"foo:123"}
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-1 childlist__pid css-11rz0ao-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;

exports[`Child renders using ajax-loaded data 1`] = `
<div
  className="childlist__item"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
    >
      <span
        onClick={[Function]}
      >
        <svg
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium childlist__expandicon css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddBoxIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4z"
          />
          <title>
            Expand Tree
          </title>
        </svg>
      </span>
       
      <a
        href="/edit/object/foo:123"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        ref={[Function]}
      >
        ajax-loaded title
      </a>
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-1 childlist__pid css-11rz0ao-MuiGrid-root"
    >
      foo:123
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
    >
      CopyPidButton
    </div>
    <div
      className="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-none css-17fpwt7-MuiGrid-root"
      style={
        {
          "textAlign": "right",
        }
      }
    >
      ObjectButtonBar:{"pid":"foo:123"}
    </div>
  </div>
</div>
`;
